# Groovy_GH

./: .gitignore  README.md
GroovyCore/: CMakeLists.txt
GroovyCore/docs/: AVX512.md
GroovyCore/include/: GroovyCore.h
GroovyCore/src/: analysis.cpp  analysis.h  api.cpp  audio_reader.cpp  audio_reader.h  fft.cpp  fft.h  simd.cpp  simd.h  simd_avx512.cpp  simd_scalar.cpp
Groovy_GH/: Groovy_GH.csproj  Groovy_GH.slnx  Groovy_GHComponent.cs  Groovy_GHInfo.cs  Groovy_JSONComponent.cs  Groovy_SettingsComponent.cs  Groovy_SettingsForm.cs
Groovy_GH/Core/: AudioAnalysisResult.cs  GroovyState.cs  MathUtils.cs  MotionMapper.cs  MotionMappingConfig.cs
Groovy_GH/Interop/: GroovyCore.cs
Groovy_GH/Presets/: classical.json  edm.json  rock.json  techno.json
